Fixed overflowing project section

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -6,7 +6,6 @@ html, body {
 
 section {
 	border-bottom: 2px solid #ddd; 
-	height: 100%;
 }
 
 footer 	{
